--- a/index.html
+++ b/index.html
@@ -13,9 +13,32 @@
 </head>
 
 <body>
-    <h1>Teste</h1>
-    <h2>Subteste</h2>
-    <a href="#">link</a>
+    <header class="container">
+        <nav id="primary" class="grid grid-flow-col">
+            <div>
+                <img src="assets/icons/List.svg" alt="Menu Icon">
+                <strong>Menu</strong>
+            </div>
+
+            <div>
+                <img src="assets/Logo.svg" alt="TechNews Logo">
+            </div>
+
+            <div>
+                <strong>Buscar</strong>
+                <img src="assets/icons/MagnifyingGlass.svg" alt="Magnifying Glass">
+            </div>
+        </nav>
+        <nav id="secondary" class="grid grid-flow-col">
+            <a href="">Inteligência Artificial</a>
+            <a href="">Blockchain</a>
+            <a href="">Hologramas</a>
+            <a href="">Internet</a>
+            <a href="">Vestíveis</a>
+            <a href="">Realidade Aumentada</a>
+            <a href="">Realidade Virtual</a>
+        </nav>
+    </header>
 </body>
 
 </html>
