--- a/index.html
+++ b/index.html
@@ -39,6 +39,20 @@
             <a href="">Realidade Virtual</a>
         </nav>
     </header>
+
+    <main class="grid container">
+        <section id="featured" class="grid grid-flow-col gap-16">
+            <div>
+                <img src="assets/images/Image 01.png" alt="">
+            </div>
+            <div class="grid grid-cols-2 gap-16">
+                <div><img src="assets/images/Image 02.png" alt=""></div>
+                <div><img src="assets/images/Image 03.png" alt=""></div>
+                <div><img src="assets/images/Image 04.png" alt=""></div>
+                <div><img src="assets/images/Image 05.png" alt=""></div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
