--- a/index.html
+++ b/index.html
@@ -42,9 +42,16 @@
 
     <main class="grid container">
         <section id="featured" class="grid grid-flow-col gap-16">
-            <div class="card">
+            <figure class="card">
                 <img src="assets/images/Image 01.png" alt="">
-            </div>
+
+                <figcaption>
+                    <span class="content-tag">robótica</span>
+
+                    <h2 class="text-2xl">Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e
+                        eficiência nas residências.</h2>
+                </figcaption>
+            </figure>
             <div class="grid grid-cols-2 gap-16">
                 <div><img src="assets/images/Image 02.png" alt=""></div>
                 <div><img src="assets/images/Image 03.png" alt=""></div>
