--- a/index.html
+++ b/index.html
@@ -43,20 +43,66 @@
     <main class="grid container">
         <section id="featured" class="grid grid-flow-col gap-16">
             <figure class="card">
-                <img src="assets/images/Image 01.png" alt="">
+                <img src="assets/images/Image 01.png" alt="Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e
+                eficiência nas residências.">
 
                 <figcaption>
                     <span class="content-tag">robótica</span>
 
-                    <h2 class="text-2xl">Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais conforto e
+                    <h2 class="text-2xl">Robôs domésticos começam a ser adotados para tarefas diárias, prometendo mais
+                        conforto e
                         eficiência nas residências.</h2>
                 </figcaption>
             </figure>
+
             <div class="grid grid-cols-2 gap-16">
-                <div><img src="assets/images/Image 02.png" alt=""></div>
-                <div><img src="assets/images/Image 03.png" alt=""></div>
-                <div><img src="assets/images/Image 04.png" alt=""></div>
-                <div><img src="assets/images/Image 05.png" alt=""></div>
+                <figure class="card">
+                    <img src="assets/images/Image 02.png"
+                        alt="Novo Smartphone Projetor 3D chega ao mercado, transformando a forma como vemos nossas telas!">
+
+                    <figcaption>
+                        <span class="content-tag">hologramas</span>
+
+                        <h2 class="text-lg">Novo Smartphone Projetor 3D chega ao mercado, transformando a forma como
+                            vemos nossas telas!</h2>
+                    </figcaption>
+                </figure>
+
+                <figure class="card">
+                    <img src="assets/images/Image 03.png"
+                        alt="Tecnologia 6G chega às metrópoles brasileiras, prometendo revolucionar a forma como vivemos e nos comunicamos.">
+
+                    <figcaption>
+                        <span class="content-tag">internet</span>
+
+                        <h2 class="text-lg">Tecnologia 6G chega às metrópoles brasileiras, prometendo revolucionar a
+                            forma como vivemos e nos comuni...</h2>
+                    </figcaption>
+                </figure>
+
+                <figure class="card">
+                    <img src="assets/images/Image 04.png" alt="Empresa lança relógio inteligente capaz de monitorar a saúde mental,
+                        oferecendo insights valiosos para o bem-estar pessoal.">
+
+                    <figcaption>
+                        <span class="content-tag">vestíveis</span>
+
+                        <h2 class="text-lg">Empresa lança relógio inteligente capaz de monitorar a saúde mental,
+                            oferecendo insights valiosos para o...</h2>
+                    </figcaption>
+                </figure>
+
+                <figure class="card">
+                    <img src="assets/images/Image 05.png" alt="Escolas adotam a tecnologia VR para proporcionar experiências
+                        imersivas, transformando a aprendizagem tradicional.">
+
+                    <figcaption>
+                        <span class="content-tag">realidade virtual</span>
+
+                        <h2 class="text-lg">Escolas adotam a tecnologia VR para proporcionar experiências
+                            imersivas, transformando a aprendizagem trad...</h2>
+                    </figcaption>
+                </figure>
             </div>
         </section>
     </main>
