structure the most-read of the week section

--- a/index.html
+++ b/index.html
@@ -105,6 +105,42 @@
                 </figure>
             </div>
         </section>
+
+        <section id="weekly">
+            <header class="grid grid-flow-col">
+                <h3>Mais lidas da semana</h3>
+                <a href="#" class="grid grid-flow-col">
+                    <strong>ver tudo</strong>
+                    <span></span>
+                </a>
+            </header>
+
+            <div class="grid gap-16">
+                <figure>
+                    <span class="content-tag">veículos</span>
+                    <img src="assets/images/Image 06.png" alt="">
+                    <p>Protótipo de veículo voador é apresentado, marcando o início da era dos transportes aéreos pessoa...</p>
+                </figure>
+
+                <figure>
+                    <span class="content-tag">hologramas</span>
+                    <img src="assets/images/Image 07.png" alt="">
+                    <p>Plataforma de videoconferência apresenta nova função de hologramas, tornando as chamada...</p>
+                </figure>
+
+                <figure>
+                    <span class="content-tag">realidade virtual</span>
+                    <img src="assets/images/Image 08.png" alt="">
+                    <p>Nova geração de consoles de videogame é lançada, trazendo gráficos ultra-realistas e experiê...</p>
+                </figure>
+
+                <figure>
+                    <span class="content-tag">internet</span>
+                    <img src="assets/images/Image 09.png" alt="">
+                    <p>Projeto busca oferecer internet de alta velocidade em áreas remotas através de satélites.</p>
+                </figure>
+            </div>
+        </section>
     </main>
 </body>
 
