apply styles to the most-read of the week section

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <header class="grid grid-flow-col">
                 <h3>Mais lidas da semana</h3>
                 <a href="#" class="grid grid-flow-col">
-                    <strong>ver tudo</strong>
+                    <strong>Ver tudo</strong>
                     <span></span>
                 </a>
             </header>
