--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
                 <figure>
                     <span class="content-tag">veículos</span>
                     <img src="assets/images/Image 06.png" alt="">
-                    <p>Protótipo de veículo voador é apresentado, marcando o início da era dos transportes aéreos pessoa...</p>
+                    <p>Protótipo de veículo voador é apresentado, marcando o início da era dos transportes aéreos
+                        pessoa...</p>
                 </figure>
 
                 <figure>
@@ -131,7 +132,8 @@
                 <figure>
                     <span class="content-tag">realidade virtual</span>
                     <img src="assets/images/Image 08.png" alt="">
-                    <p>Nova geração de consoles de videogame é lançada, trazendo gráficos ultra-realistas e experiê...</p>
+                    <p>Nova geração de consoles de videogame é lançada, trazendo gráficos ultra-realistas e experiê...
+                    </p>
                 </figure>
 
                 <figure>
@@ -141,6 +143,153 @@
                 </figure>
             </div>
         </section>
+
+        <section id="ai">
+            <header class="grid grid-flow-col">
+                <h3>Destaques de Inteligência Artificial</h3>
+                <a href="#" class="grid grid-flow-col">
+                    <strong>Ver tudo</strong>
+                    <span></span>
+                </a>
+            </header>
+
+            <div class="grid gap-32">
+                <article class="grid grid-flow-col gap-16">
+                    <div>
+                        <span class="content-tag">inteligência artificial</span>
+                        <h3 class="text-xl">Empresa surpreende o mundo ao anunciar um algoritmo capaz de prever eventos
+                            futuros com alta precisão.</h3>
+                        <p class="text-sm">Em um avanço surpreendente da inteligência artificial, uma empresa anuncia o
+                            desenvolvimento de um algoritmo capaz de prever eventos futuros com notável precisão.
+                            Descubra como essa tecnologia está desafiando as fronteiras da previsão e quais são as
+                            implicações para diversas áreas, desde finanças até pla...</p>
+                    </div>
+                    <div>
+                        <img src="assets/images/Image 10.png" alt="">
+                    </div>
+                </article>
+
+                <article class="grid grid-flow-col gap-16">
+                    <div>
+                        <span class="content-tag">inteligência artificial</span>
+                        <h3 class="text-xl">Dispositivo portátil promete traduzir instantaneamente diferentes idiomas,
+                            facilitando a comunicação global.</h3>
+                        <p class="text-sm">Em um mundo cada vez mais conectado, a comunicação sem fronteiras é
+                            essencial. Nesse contexto, um dispositivo portátil surge como um verdadeiro herói
+                            linguístico, prometendo quebrar as barreiras idiomáticas instantaneamente. Imagine poder se
+                            comunicar fluentemente em qualquer lugar do mundo, indepe...</p>
+                    </div>
+                    <div>
+                        <img src="assets/images/Image 11.png" alt="">
+                    </div>
+                </article>
+
+                <article class="grid grid-flow-col gap-16">
+                    <div>
+                        <span class="content-tag">inteligência artificial</span>
+                        <h3 class="text-xl">Criados para auxiliar idosos, robôs de companhia ganham popularidade,
+                            oferecendo suporte emocional e físico aos usu...</h3>
+                        <p class="text-sm">A tecnologia não só avança, mas também busca tornar a vida mais significativa
+                            para todas as gerações. No cenário atual, os robôs sociais, projetados especialmente para
+                            oferecer apoio e companhia aos idosos, estão ganhando destaque. Mais do que meros
+                            assistentes, esses robôs são programados para f...</p>
+                    </div>
+                    <div>
+                        <img src="assets/images/Image 12.png" alt="">
+                    </div>
+                </article>
+
+                <article class="grid grid-flow-col gap-16">
+                    <div>
+                        <span class="content-tag">inteligência artificial</span>
+                        <h3 class="text-xl">Aplicativo utiliza inteligência artificial para ajudar usuários a manterem o
+                            foco e aumentarem a produtividade no dia a dia.</h3>
+                        <p class="text-sm">No turbilhão da vida moderna, onde distrações são abundantes, um aplicativo
+                            inovador surge como um aliado indispensável para quem busca maior concentração e eficiência
+                            no cotidiano. Utilizando avançados algoritmos de inteligência artificial, este aplicativo
+                            promete mais do que simplesmente gerenci...</p>
+                    </div>
+                    <div>
+                        <img src="assets/images/Image 13.png" alt="">
+                    </div>
+                </article>
+            </div>
+        </section>
+
+        <div>
+            <div id="ads">
+                <img src="assets/Ads.png" alt="">
+            </div>
+
+            <section id="more">
+                <header class="grid grid-flow-col">
+                    <h3>Viu isso aqui?</h3>
+                    <a href="#" class="grid grid-flow-col">
+                        <strong>Ver tudo</strong>
+                        <span></span>
+                    </a>
+                </header>
+
+                <div class="grid gap-32">
+                    <article class="grid grid-flow-col gap-16">
+                        <div>
+                            <img src="assets/images/Image 14.png"
+                                alt="Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e pro...">
+                        </div>
+                        <div>
+                            <span class="content-tag">software</span>
+                            <h3 class="text-xl">Aplicativo de monitoramento ambiental ganha destaque, incentivando
+                                práticas ecológicas e pro...</h3>
+                        </div>
+                    </article>
+
+                    <article class="grid grid-flow-col gap-16">
+                        <div>
+                            <img src="assets/images/Image 15.png" alt="Óculos de realidade virtual com feedback tátil proporcionam uma
+                                experiência sensorial complet...">
+                        </div>
+                        <div>
+                            <span class="content-tag">realidade virtual</span>
+                            <h3 class="text-xl">Óculos de realidade virtual com feedback tátil proporcionam uma
+                                experiência sensorial complet...</h3>
+                        </div>
+                    </article>
+                    <article class="grid grid-flow-col gap-16">
+                        <div>
+                            <img src="assets/images/Image 16.png"
+                                alt="Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar o i...">
+                        </div>
+                        <div>
+                            <span class="content-tag">criptomoedas</span>
+                            <h3 class="text-xl">Surge uma nova moeda digital baseada em tecnologias sustentáveis,
+                                buscando minimizar o i...</h3>
+                        </div>
+                    </article>
+                    <article class="grid grid-flow-col gap-16">
+                        <div>
+                            <img src="assets/images/Image 17.png"
+                                alt="Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando o ce...">
+                        </div>
+                        <div>
+                            <span class="content-tag">drones</span>
+                            <h3 class="text-xl">Empresas de e-commerce implementam frota de drones para entregas
+                                rápidas, transformando o ce...</h3>
+                        </div>
+                    </article>
+                    <article class="grid grid-flow-col gap-16">
+                        <div>
+                            <img src="assets/images/Image 18.png"
+                                alt="Tecnologia inovadora permite a impressão 3D de órgãos humanos, revolucionando a medicina e a li...">
+                        </div>
+                        <div>
+                            <span class="content-tag">impressão 3d</span>
+                            <h3 class="text-xl">Tecnologia inovadora permite a impressão 3D de órgãos humanos,
+                                revolucionando a medicina e a li...</h3>
+                        </div>
+                    </article>
+                </div>
+            </section>
+        </div>
     </main>
 </body>
 
