style the final cards

--- a/index.html
+++ b/index.html
@@ -118,27 +118,31 @@
             <div class="grid gap-16">
                 <figure>
                     <span class="content-tag">veículos</span>
-                    <img src="assets/images/Image 06.png" alt="">
+                    <img src="assets/images/Image 06.png"
+                        alt="Protótipo de veículo voador é apresentado, marcando o início da era dos transportes aéreos pessoais.">
                     <p>Protótipo de veículo voador é apresentado, marcando o início da era dos transportes aéreos
                         pessoa...</p>
                 </figure>
 
                 <figure>
                     <span class="content-tag">hologramas</span>
-                    <img src="assets/images/Image 07.png" alt="">
+                    <img src="assets/images/Image 07.png"
+                        alt="Plataforma de videoconferência apresenta nova função de hologramas, tornando as chamadas virtuais mais realistas e envolventes.">
                     <p>Plataforma de videoconferência apresenta nova função de hologramas, tornando as chamada...</p>
                 </figure>
 
                 <figure>
                     <span class="content-tag">realidade virtual</span>
-                    <img src="assets/images/Image 08.png" alt="">
+                    <img src="assets/images/Image 08.png"
+                        alt="Nova geração de consoles de videogame é lançada, trazendo gráficos ultra-realistas e experiências de jogo totalmente envolventes.">
                     <p>Nova geração de consoles de videogame é lançada, trazendo gráficos ultra-realistas e experiê...
                     </p>
                 </figure>
 
                 <figure>
                     <span class="content-tag">internet</span>
-                    <img src="assets/images/Image 09.png" alt="">
+                    <img src="assets/images/Image 09.png"
+                        alt="Projeto busca oferecer internet de alta velocidade em áreas remotas através de satélites.">
                     <p>Projeto busca oferecer internet de alta velocidade em áreas remotas através de satélites.</p>
                 </figure>
             </div>
@@ -165,7 +169,8 @@
                             implicações para diversas áreas, desde finanças até pla...</p>
                     </div>
                     <div>
-                        <img src="assets/images/Image 10.png" alt="">
+                        <img src="assets/images/Image 10.png" alt="Empresa surpreende o mundo ao anunciar um algoritmo capaz de prever eventos
+                        futuros com alta precisão.">
                     </div>
                 </article>
 
@@ -180,7 +185,8 @@
                             comunicar fluentemente em qualquer lugar do mundo, indepe...</p>
                     </div>
                     <div>
-                        <img src="assets/images/Image 11.png" alt="">
+                        <img src="assets/images/Image 11.png"
+                            alt="Dispositivo portátil promete traduzir instantaneamente diferentes idiomas, facilitando a comunicação global.">
                     </div>
                 </article>
 
@@ -195,7 +201,8 @@
                             assistentes, esses robôs são programados para f...</p>
                     </div>
                     <div>
-                        <img src="assets/images/Image 12.png" alt="">
+                        <img src="assets/images/Image 12.png"
+                            alt="Criados para auxiliar idosos, robôs de companhia ganham popularidade, oferecendo suporte emocional e físico aos usuários.">
                     </div>
                 </article>
 
@@ -210,15 +217,16 @@
                             promete mais do que simplesmente gerenci...</p>
                     </div>
                     <div>
-                        <img src="assets/images/Image 13.png" alt="">
+                        <img src="assets/images/Image 13.png"
+                            alt="Aplicativo utiliza inteligência artificial para ajudar usuários a manterem o foco e aumentarem a produtividade no dia a dia.">
                     </div>
                 </article>
             </div>
         </section>
 
-        <div>
+        <aside>
             <div id="ads">
-                <img src="assets/Ads.png" alt="">
+                <img src="assets/Ads.png" alt="ads">
             </div>
 
             <section id="more">
@@ -234,62 +242,62 @@
                     <article class="grid grid-flow-col gap-16">
                         <div>
                             <img src="assets/images/Image 14.png"
-                                alt="Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e pro...">
+                                alt="Aplicativo de monitoramento ambiental ganha destaque, incentivando práticas ecológicas e promovendo a conscientização.">
                         </div>
                         <div>
                             <span class="content-tag">software</span>
                             <h3 class="text-xl">Aplicativo de monitoramento ambiental ganha destaque, incentivando
-                                práticas ecológicas e pro...</h3>
+                                práticas ecológic...</h3>
                         </div>
                     </article>
 
                     <article class="grid grid-flow-col gap-16">
                         <div>
-                            <img src="assets/images/Image 15.png" alt="Óculos de realidade virtual com feedback tátil proporcionam uma
-                                experiência sensorial complet...">
+                            <img src="assets/images/Image 15.png"
+                                alt="Óculos de realidade virtual com feedback tátil proporcionam uma experiência sensorial completa, imergindo usuários em ambientes digitais.">
                         </div>
                         <div>
                             <span class="content-tag">realidade virtual</span>
                             <h3 class="text-xl">Óculos de realidade virtual com feedback tátil proporcionam uma
-                                experiência sensorial complet...</h3>
+                                experiência sensorial comp...</h3>
                         </div>
                     </article>
                     <article class="grid grid-flow-col gap-16">
                         <div>
                             <img src="assets/images/Image 16.png"
-                                alt="Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar o i...">
+                                alt="Surge uma nova moeda digital baseada em tecnologias sustentáveis, buscando minimizar o impacto ambiental associado à mineração de criptomoedas.">
                         </div>
                         <div>
                             <span class="content-tag">criptomoedas</span>
                             <h3 class="text-xl">Surge uma nova moeda digital baseada em tecnologias sustentáveis,
-                                buscando minimizar o i...</h3>
+                                buscando minimizar...</h3>
                         </div>
                     </article>
                     <article class="grid grid-flow-col gap-16">
                         <div>
                             <img src="assets/images/Image 17.png"
-                                alt="Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando o ce...">
+                                alt="Empresas de e-commerce implementam frota de drones para entregas rápidas, transformando o cenário do comércio online.">
                         </div>
                         <div>
                             <span class="content-tag">drones</span>
                             <h3 class="text-xl">Empresas de e-commerce implementam frota de drones para entregas
-                                rápidas, transformando o ce...</h3>
+                                rápidas, transformando...</h3>
                         </div>
                     </article>
                     <article class="grid grid-flow-col gap-16">
                         <div>
                             <img src="assets/images/Image 18.png"
-                                alt="Tecnologia inovadora permite a impressão 3D de órgãos humanos, revolucionando a medicina e a li...">
+                                alt="Tecnologia inovadora permite a impressão 3D de órgãos humanos, revolucionando a medicina e a lista de espera por transplantes.">
                         </div>
                         <div>
                             <span class="content-tag">impressão 3d</span>
                             <h3 class="text-xl">Tecnologia inovadora permite a impressão 3D de órgãos humanos,
-                                revolucionando a medicina e a li...</h3>
+                                revolucionando a med...</h3>
                         </div>
                     </article>
                 </div>
             </section>
-        </div>
+        </aside>
     </main>
 </body>
 
