--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav id="primary" class="grid grid-flow-col">
             <div>
                 <img src="assets/icons/List.svg" alt="Menu Icon">
-                <strong>Menu</strong>
+                <strong class="desktop-only">Menu</strong>
             </div>
 
             <div>
@@ -25,7 +25,7 @@
             </div>
 
             <div>
-                <strong>Search</strong>
+                <strong class="desktop-only">Search</strong>
                 <img src="assets/icons/MagnifyingGlass.svg" alt="Magnifying Glass">
             </div>
         </nav>
@@ -43,7 +43,7 @@
     <main class="grid container">
         <section id="featured" class="grid grid-flow-col gap-16">
             <figure class="card">
-                <img src="assets/images/Image 01.png"
+                <img id="first-card-img" src="assets/images/Image 01.png"
                     alt="Domestic robots are beginning to be adopted for daily tasks, promising more comfort and efficiency in households.">
 
                 <figcaption>
